--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -1110,6 +1110,18 @@
   timestamp = {2020.01.05},
 }
 
+@Article{Alstott2014a,
+  author    = {Alstott, J. and Panzarasa, P. and Rubinov, M. and Bullmore, E. T. and Vértes, P. E.},
+  title     = {A Unifying Framework for Measuring Weighted Rich Clubs},
+  journal   = {Scientific Reports},
+  year      = {2014},
+  volume    = {4},
+  pages     = {7258},
+  doi       = {10.1038/srep07258},
+  owner     = {Vincent},
+  timestamp = {2021.09.23},
+}
+
 @Article{Altafini2012,
   author    = {Altafini, C.},
   title     = {Dynamics of Opinion Forming in Structurally Balanced Social Networks},
@@ -1983,7 +1995,7 @@
 }
 
 @InProceedings{Baccianella2010,
-  author    = {Baccianella, Stefano and Esuli, Andrea and Sebastiani, Fabrizio},
+  author    = {Baccianella, S. and Esuli, A. and Sebastiani, F.},
   title     = {SentiWordNet 3.0: An Enhanced Lexical Resource for Sentiment Analysis and Opinion Mining},
   booktitle = {7th conference on International Language Resources and Evaluation},
   year      = {2010},
@@ -2747,6 +2759,18 @@
   timestamp = {2019.04.10},
 }
 
+@Article{Basole2014,
+  author    = {Basole, R. C. and Bellamy, M. A.},
+  title     = {Visual analysis of supply network risks: Insights from the electronics industry},
+  journal   = {Decision Support Systems},
+  year      = {2014},
+  volume    = {67},
+  pages     = {109-120},
+  doi       = {10.1016/j.dss.2014.08.008},
+  owner     = {Vincent},
+  timestamp = {2021.09.23},
+}
+
 @Article{Bassiou2010,
   author    = {Bassiou, N. and Moschou, V. and Kotropoulos, C.},
   title     = {Speaker Diarization Exploiting the Eigengap Criterion and Cluster Ensembles},
@@ -3135,6 +3159,18 @@
   doi       = {10.1016/j.inffus.2015.08.005},
   owner     = {Vincent},
   timestamp = {2019.03.24},
+}
+
+@Article{Bellosta1995,
+  author    = {Bellosta, M.-C.},
+  title     = {Victor Hugo: Les Rues des Misérables},
+  journal   = {Magazine littéraire},
+  year      = {1995},
+  volume    = {332},
+  pages     = {36-39},
+  owner     = {Vincent},
+  timestamp = {2021.09.24},
+  url       = {https://gallica.bnf.fr/ark:/12148/bpt6k5652722f/texteBrut},
 }
 
 @InCollection{Bemong2010,
@@ -4001,6 +4037,18 @@
   timestamp = {2019.03.28},
 }
 
+@Article{Bloch2017,
+  author    = {Bloch, F. and Jackson, M. O. and Tebaldi, P.},
+  title     = {Centrality Measures in Networks},
+  journal   = {arXiv},
+  year      = {2017},
+  volume    = {physics.soc-ph},
+  pages     = {1608.05845},
+  owner     = {Vincent},
+  timestamp = {2017.06.20},
+  url       = {https://arxiv.org/abs/1608.05845},
+}
+
 @Article{Block2014,
   author    = {Block, R. A. and Grondin, S.},
   title     = {Timing and time perception: A selective review and commentary on recent reviews},
@@ -4617,6 +4665,16 @@
   timestamp = {2017.12.06},
 }
 
+@InProceedings{Borrega2007,
+  author    = {Borrega, O. and Taulé, M. and Martı, M. A.},
+  title     = {What do we mean when we speak about named entities},
+  booktitle = {Corpus Linguistics Conference},
+  year      = {2007},
+  owner     = {Vincent},
+  timestamp = {2021.09.23},
+  url       = {http://ucrel.lancs.ac.uk/publications/CL2007/paper/92_Paper.pdf},
+}
+
 @InCollection{Borza2019,
   author    = {Borza, C.},
   title     = {How to Populate a Country. A Quantitative Analysis of the Rural Novel from Romania (1900-2000)},
@@ -5011,6 +5069,19 @@
   doi       = {10.1007/978-3-540-24595-7_10},
   owner     = {Vincent},
   timestamp = {2020.08.11},
+}
+
+@Article{Brandes2008a,
+  author    = {Brandes, U. and Delling, D. and Gaertler, M. and Gorke, R. and Hoefer, M. and Nikoloski, Z. and Wagner, D.},
+  title     = {On modularity clustering},
+  journal   = {IEEE Transactions on Knowledge and Data Engineering},
+  year      = {2008},
+  volume    = {20},
+  number    = {2},
+  pages     = {172-188},
+  doi       = {10.1109/TKDE.2007.190689},
+  owner     = {Vincent},
+  timestamp = {2010.06.03},
 }
 
 @Article{Brandes2011,
@@ -5478,6 +5549,20 @@
   owner     = {Vincent},
   timestamp = {2019.04.07},
   url       = {https://books.google.fr/books/about/Media_Effects.html?id=KnQXQOP5uoMC&redir_esc=y},
+}
+
+@Article{Bu2020,
+  author        = {Bu, Z. and Li, H.-J. and Zhang, C. and Cao, J. and Li, A. and Shi, Y.},
+  title         = {Graph K-means Based on Leader Identification, Dynamic Game, and Opinion Dynamics},
+  journal       = {IEEE Transactions on Knowledge and Data Engineering},
+  year          = {2020},
+  volume        = {32},
+  number        = {7},
+  pages         = {1348-1361},
+  __markedentry = {[Vincent:]},
+  doi           = {10.1109/tkde.2019.2903712},
+  owner         = {Vincent},
+  timestamp     = {2021.09.23},
 }
 
 @Book{Buchanan1929,
@@ -6194,6 +6279,31 @@ arXiv: https://arxiv.org/abs/1709.07604},
   timestamp = {2020.01.04},
 }
 
+@Article{Cao2019,
+  author    = {Cao, J. and Bu, Z. and Wang, Y. and Yang, H. and Jiang, J. and Li, H.-J.},
+  title     = {Detecting Prosumer-Community Groups in Smart Grids From the Multiagent Perspective},
+  journal   = {IEEE Transactions on Systems, Man, and Cybernetics: Systems},
+  year      = {2019},
+  volume    = {49},
+  number    = {8},
+  pages     = {1652-1664},
+  doi       = {10.1109/tsmc.2019.2899366},
+  owner     = {Vincent},
+  timestamp = {2021.09.23},
+}
+
+@Article{Cardillo2013,
+  author    = {Cardillo, A. and Gómez-Gardeñes, J. and Zanin, M. and Romance, M. and Papo, D. and del Pozo, F. and Boccaletti, S.},
+  title     = {Emergence of network features from multiplexity},
+  journal   = {Scientific Reports},
+  year      = {2013},
+  volume    = {3},
+  pages     = {1344},
+  doi       = {10.1038/srep01344},
+  owner     = {Vincent},
+  timestamp = {2015.11.20},
+}
+
 @InProceedings{Carenini2005,
   author    = {Carenini, G. and Ng, R. T. and Zhou, X.},
   title     = {Scalable discovery of hidden emails from large folders},
@@ -6524,6 +6634,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   owner       = {Vincent},
   timestamp   = {2018.06.12},
   url         = {http://cs224d.stanford.edu/reports/ChagantyArun.pdf},
+}
+
+@Article{Chakraborti2009,
+  author    = {Chakraborti, A. and Patriarca, M.},
+  title     = {Variational Principle for the Pareto Power Law},
+  journal   = {Physical Review Letters},
+  year      = {2009},
+  volume    = {103},
+  number    = {22},
+  pages     = {228701},
+  doi       = {10.1103/physrevlett.103.228701},
+  owner     = {Vincent},
+  timestamp = {2021.09.23},
 }
 
 @Article{Chakraborty2013,
@@ -7945,6 +8068,16 @@ arXiv: https://arxiv.org/abs/1709.07604},
   url       = {https://www.routledge.com/Whos-Who-in-the-Old-Testament-2nd-Edition/Comay/p/book/9780415260312},
 }
 
+@Book{Combes1981,
+  title     = {Paris dans les Misérables},
+  publisher = {CID Éditions},
+  year      = {1981},
+  author    = {Combes, C.},
+  owner     = {Vincent},
+  timestamp = {2021.09.24},
+  url       = {https://www.leslibraires.fr/livre/19837579-paris-dans-les-miserables---hugo-combes-claudette--paris-cid-editions-1981},
+}
+
 @Article{Conaldi2012,
   author    = {Conaldi, G. and Lomi, A. and Tonellato, M.},
   title     = {Dynamic Models of Affiliation and the Network Structure of Problem Solving in an Open Source Software Project},
@@ -8104,6 +8237,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   owner     = {Vincent},
   timestamp = {2020.07.25},
   url       = {http://cup.columbia.edu/book/a-new-history-of-early-english-drama/9780231102438},
+}
+
+@Article{Cooley1930,
+  author    = {Cooley, A.},
+  title     = {On the Trail of Jean Valjean},
+  journal   = {French Review},
+  year      = {1930},
+  volume    = {3},
+  number    = {5},
+  pages     = {355-364},
+  owner     = {Vincent},
+  timestamp = {2021.09.24},
+  url       = {https://www.jstor.org/stable/379543},
 }
 
 @Article{Cooper2005,
@@ -9664,6 +9810,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   timestamp = {2018.10.15},
 }
 
+@Article{Dobrow2011,
+  author    = {Dobrow, S. R. and Chandler, D. E. and Murphy, W. M. and Kram, K. E.},
+  title     = {A Review of Developmental Networks},
+  journal   = {Journal of Management},
+  year      = {2011},
+  volume    = {38},
+  number    = {1},
+  pages     = {210-242},
+  doi       = {10.1177/0149206311415858},
+  owner     = {Vincent},
+  timestamp = {2021.09.23},
+}
+
 @Book{Dobson2001,
   title     = {The Oxford Companion to Shakespeare},
   publisher = {Oxford University Press},
@@ -9722,6 +9881,18 @@ arXiv: https://arxiv.org/abs/1709.07604},
   doi       = {10.5334/bbi.30},
   owner     = {Vincent},
   timestamp = {2018.10.26},
+}
+
+@Article{Doitch2019,
+  author    = {Doitch, A. and Yazdi, R. and Hazan, T. and Reichart, R.},
+  title     = {Perturbation Based Learning for Structured {NLP} Tasks with Application to Dependency Parsing},
+  journal   = {Transactions of the Association for Computational Linguistics},
+  year      = {2019},
+  volume    = {7},
+  pages     = {643-659},
+  doi       = {10.1162/tacl_a_00291},
+  owner     = {Vincent},
+  timestamp = {2021.09.23},
 }
 
 @Article{Domenico2013,
@@ -12476,6 +12647,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   owner     = {Vincent},
   timestamp = {2019.06.24},
   url       = {https://books.google.fr/books/about/An_Introduction_to_Narratology.html?id=uwmIgqX9WCYC},
+}
+
+@Article{Flynn2010,
+  author    = {Flynn, F. J. and Reagans, R. E. and Guillory, L.},
+  title     = {Do you two know each other? Transitivity, homophily, and the need for (network) closure},
+  journal   = {Journal of Personality and Social Psychology},
+  year      = {2010},
+  volume    = {99},
+  number    = {5},
+  pages     = {855-869},
+  doi       = {10.1037/a0020961},
+  owner     = {Vincent},
+  timestamp = {2021.09.23},
 }
 
 @Book{Foakes2003,
@@ -17243,6 +17427,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2017.04.20},
 }
 
+@InProceedings{Huang2018,
+  author    = {Huang, S. and Wu, J.},
+  title     = {A Pragmatic Approach for Classical Chinese Word Segmentation},
+  booktitle = {11th International Conference on Language Resources and Evaluation},
+  year      = {2018},
+  owner     = {Vincent},
+  timestamp = {2021.09.23},
+  url       = {https://aclanthology.org/L18-1186},
+}
+
 @InProceedings{Huang2019,
   author    = {Huang, J. and Xiang, C. and Yuan, S. and Yuan, D. and Huang, X.},
   title     = {Character-Aware Convolutional Recurrent Networks with Self-Attention for Emotion Detection on Twitter},
@@ -18065,6 +18259,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   journal   = {Frontiers in Genetics},
   year      = {2019},
   volume    = {10},
+  pages     = {240},
   doi       = {10.3389/fgene.2019.00240},
   owner     = {Vincent},
   timestamp = {2021.09.21},
@@ -19150,6 +19345,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://www.jstor.org/stable/20107058},
 }
 
+@Article{Kayastha2011,
+  author    = {Kayastha, N. and Niyato, D. and Wang, P. and Hossain, E.},
+  title     = {Applications, Architectures, and Protocol Design Issues for Mobile Social Networks: A Survey},
+  journal   = {Proceedings of the IEEE},
+  year      = {2011},
+  volume    = {99},
+  number    = {12},
+  pages     = {2130-2158},
+  doi       = {10.1109/jproc.2011.2169033},
+  owner     = {Vincent},
+  timestamp = {2021.09.23},
+}
+
 @Article{Kazantseva2010,
   author    = {Kazantseva, A. and Szpakowicz, S.},
   title     = {Summarizing short stories},
@@ -19762,6 +19970,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1037/a0024218},
   owner     = {Vincent},
   timestamp = {2020.01.04},
+}
+
+@InCollection{Kirschenbaum2016,
+  author    = {Kirschenbaum, M. G.},
+  title     = {What is digital humanities and what's it doing in English departments},
+  booktitle = {Defining Digital Humanities},
+  publisher = {Routledge},
+  year      = {2016},
+  pages     = {211-220},
+  owner     = {Vincent},
+  timestamp = {2021.09.23},
+  url       = {https://dhdebates.gc.cuny.edu/read/untitled-88c11800-9446-469b-a3be-3fdb36bfbd1e/section/f5640d43-b8eb-4d49-bc4b-eb31a16f3d06},
 }
 
 @InCollection{Kirwan2014,
@@ -22584,6 +22804,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.13},
 }
 
+@InProceedings{Li2008,
+  author    = {Li, Y. and Krishnamurthy, R. and Raghavan, S. and Vaithyanathan, S. and Jagadish, H. V.},
+  title     = {Regular Expression Learning for Information Extraction},
+  booktitle = {Conference on Empirical Methods in Natural Language Processing},
+  year      = {2008},
+  pages     = {21-30},
+  owner     = {Vincent},
+  timestamp = {2021.09.23},
+  url       = {https://aclanthology.org/D08-1003/},
+}
+
 @InProceedings{Li2012,
   author    = {Li, B. and Lee-Urban, S. and Appling, D. S. and Riedl, M .O.},
   title     = {Automatically learning to tell stories about social situations from the crowd},
@@ -24878,6 +25109,33 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://aclweb.org/anthology/papers/L/L06/L06-1260/},
 }
 
+@InCollection{Marquez1998,
+  author    = {Màrquez, L. and Rodríguez, H.},
+  title     = {Part-of-speech tagging using decision trees},
+  booktitle = {European Conference on Machine Learning},
+  publisher = {Springer},
+  year      = {1998},
+  volume    = {1398},
+  series    = {Lecture Notes in Computer Science},
+  pages     = {25-36},
+  doi       = {10.1007/bfb0026668},
+  owner     = {Vincent},
+  timestamp = {2021.09.23},
+}
+
+@Article{Marrero2013,
+  author    = {Marrero, M. and Urbano, J. and Sánchez-Cuadrado, S. and Morato, J. and Gómez-Berbís, J. M.},
+  title     = {Named Entity Recognition: Fallacies, challenges and opportunities},
+  journal   = {Computer Standards and Interfaces},
+  year      = {2013},
+  volume    = {35},
+  number    = {5},
+  pages     = {482-489},
+  doi       = {10.1016/j.csi.2012.09.004},
+  owner     = {Vincent},
+  timestamp = {2013.01.16},
+}
+
 @Article{Marsden1987,
   author    = {Marsden, P. V.},
   title     = {Core Discussion Networks of Americans},
@@ -26420,6 +26678,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.08.12},
 }
 
+@Article{Mitri2020,
+  author    = {Mitri, M.},
+  title     = {Story Analysis Using Natural Language Processing and Interactive Dashboards},
+  journal   = {Journal of Computer Information Systems},
+  year      = {2020},
+  pages     = {1-11},
+  doi       = {10.1080/08874417.2020.1774442},
+  owner     = {Vincent},
+  timestamp = {2021.09.23},
+}
+
 @Article{Mittell2006,
   author    = {Mittell, J.},
   title     = {Narrative Complexity in Contemporary American Television},
@@ -27839,6 +28108,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2021.01.22},
 }
 
+@Article{Neal2017,
+  author    = {Neal, Z. P.},
+  title     = {How small is it? Comparing indices of small worldliness},
+  journal   = {Network Science},
+  year      = {2017},
+  volume    = {5},
+  number    = {1},
+  pages     = {30-44},
+  doi       = {10.1017/nws.2017.5},
+  owner     = {Vincent},
+  timestamp = {2021.09.04},
+}
+
 @InProceedings{Nefian1999,
   author    = {Nefian, A. V. and Hayes, M. H.},
   title     = {An embedded {HMM}-based approach for face detection and recognition},
@@ -29174,6 +29456,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.07},
 }
 
+@Article{Otte2002,
+  author    = {Otte, E. and Rousseau, R.},
+  title     = {Social network analysis: a powerful strategy, also for the information sciences},
+  journal   = {Journal of Information Science},
+  year      = {2002},
+  volume    = {28},
+  number    = {6},
+  pages     = {441-453},
+  doi       = {10.1177/016555150202800601},
+  owner     = {Vincent},
+  timestamp = {2021.09.23},
+}
+
 @InCollection{Otway2001,
   author    = {Otway, T.},
   title     = {Venice Preserved},
@@ -29315,6 +29610,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1086/282586},
   owner     = {Vincent},
   timestamp = {2019.04.08},
+}
+
+@InProceedings{Pakray2015,
+  author    = {Pakray, P. and Pal, A. and Majumder, G. and Gelbukh, A.},
+  title     = {Resource Building and Parts-of-Speech ({POS}) Tagging for the Mizo Language},
+  booktitle = {14th Mexican International Conference on Artificial Intelligence},
+  year      = {2015},
+  doi       = {10.1109/micai.2015.7},
+  owner     = {Vincent},
+  timestamp = {2021.09.23},
 }
 
 @InProceedings{Pal2016,
@@ -30014,6 +30319,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://mitpress.mit.edu/books/honest-signals},
 }
 
+@Article{Pepperberg1999,
+  author    = {Pepperberg, I. M.},
+  title     = {Rethinking syntax: A commentary on E. Kako's `Elements of syntax in the systems of three language-trained animals'},
+  journal   = {Animal Learning \& Behavior},
+  year      = {1999},
+  volume    = {27},
+  pages     = {15-17},
+  doi       = {10.3758/bf03199425},
+  owner     = {Vincent},
+  timestamp = {2021.09.23},
+}
+
 @Article{Perer2006,
   author    = {Perer, A. and Shneiderman, B.},
   title     = {Balancing Systematic and Flexible Exploration of Social Networks},
@@ -30597,6 +30914,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.24193/mjcst.2020.10.02},
   owner     = {Vincent},
   timestamp = {2020.12.24},
+}
+
+@Article{Polo2019,
+  author    = {Polo, M. and Iacono, U. D. and Fiorentino, G. and Pierri, A.},
+  title     = {A social network analysis approach to a digital interactive storytelling in mathematics},
+  journal   = {Journal of e-Learning and Knowledge Society},
+  year      = {2019},
+  volume    = {15},
+  number    = {3},
+  pages     = {239-250},
+  doi       = {10.20368/1971-8829/1135035},
+  owner     = {Vincent},
+  timestamp = {2021.09.23},
 }
 
 @InProceedings{Ponnambalam2016,
@@ -31193,6 +31523,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.07.23},
 }
 
+@TechReport{Radford2018,
+  author      = {Radford, A. and Narasimhan, K. and Salimans, T. and Sutskever, I.},
+  title       = {Improving language understanding with unsupervised learning},
+  institution = {OpenAI},
+  year        = {2018},
+  type        = {Technical Report},
+  owner       = {Vincent},
+  timestamp   = {2021.09.23},
+  url         = {https://openai.com/blog/language-unsupervised/},
+}
+
 @Article{Rafael2014,
   author    = {Rafael, I. and Weltsek, G. and Tabone, C.},
   title     = {A study on the relationships between theater Arts and student literacy and mathematics achievement},
@@ -31263,6 +31604,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1016/j.ijpsycho.2005.10.024},
   owner     = {Vincent},
   timestamp = {2019.04.07},
+}
+
+@InProceedings{Rajpurkar2016,
+  author    = {Rajpurkar, P. and Zhang, J. and Lopyrev, K. and Liang, P.},
+  title     = {{SQuAD}: 100,000+ Questions for Machine Comprehension of Text},
+  booktitle = {Conference on Empirical Methods in Natural Language Processing},
+  year      = {2016},
+  pages     = {2383-2392},
+  doi       = {10.18653/v1/d16-1264},
+  owner     = {Vincent},
+  timestamp = {2021.09.23},
 }
 
 @InProceedings{Ramakrishna2015,
@@ -31697,6 +32049,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2020.12.19},
   url       = {http://is.muni.cz/publication/884893/en},
+}
+
+@Article{Reichardt2006,
+  author    = {Reichardt, J. and Bornholdt, S.},
+  title     = {Statistical mechanics of community detection},
+  journal   = {Physical Review E},
+  year      = {2006},
+  volume    = {74},
+  number    = {1},
+  pages     = {016110},
+  doi       = {10.1103/PhysRevE.74.016110},
+  owner     = {Vincent},
+  timestamp = {2010.06.03},
 }
 
 @Article{Reichelt2020,
@@ -32713,6 +33078,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.3115/1218955.1219010},
   owner     = {Vincent},
   timestamp = {2019.04.08},
+}
+
+@Article{Rosati2014,
+  author    = {Rosati, E.},
+  title     = {Google Books' Library Project is fair use},
+  journal   = {Journal of Intellectual Property Law \& Practice},
+  year      = {2014},
+  volume    = {9},
+  number    = {2},
+  pages     = {104-106},
+  doi       = {10.1093/jiplp/jpt240},
+  owner     = {Vincent},
+  timestamp = {2021.09.23},
 }
 
 @Article{Rosegrant2009,
@@ -36175,6 +36553,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://books.google.fr/books?id=oD9KAwAAQBAJ},
 }
 
+@Book{Strehovec2016,
+  title     = {Text as Ride: Electronic Literature and New Media Art},
+  publisher = {Center for Literary Computing},
+  year      = {2016},
+  author    = {Strehovec, J.},
+  owner     = {Vincent},
+  timestamp = {2021.09.23},
+  url       = {https://books.google.fr/books/about/Text_as_Ride.html?id=tWnNjwEACAAJ},
+}
+
 @Article{Streitfeld2018,
   author    = {Streitfeld, D.},
   title     = {Computer Stories: A.I. Is Beginning to Assist Novelists},
@@ -37962,6 +38350,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.12.15},
 }
 
+@Article{Trieu2019,
+  author    = {Trieu, H.-L. and Tran, D.-V. and Ittoo, A. and Nguyen, L.-M.},
+  title     = {Leveraging Additional Resources for Improving Statistical Machine Translation on Asian Low-Resource Languages},
+  journal   = {ACM Transactions on Asian and Low-Resource Language Information Processing},
+  year      = {2019},
+  volume    = {18},
+  number    = {3},
+  pages     = {1-22},
+  doi       = {10.1145/3314936},
+  owner     = {Vincent},
+  timestamp = {2021.09.23},
+}
+
 @Electronic{Trilcke2015,
   author       = {Trilcke, P. and Fischer, F. and Göbel, M. and Kampkaspar, D.},
   year         = {2015},
@@ -39469,6 +39870,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://www.ijcai.org/proceedings/2018/0142.pdf},
 }
 
+@Article{Wang2020,
+  author    = {Wang, P. and Lu, J.-A. and Jin, Y. and Zhu, M. and Wang, L. and Chen, S.},
+  title     = {Statistical and network analysis of 1212 {COVID}-19 patients in Henan, China},
+  journal   = {International Journal of Infectious Diseases},
+  year      = {2020},
+  volume    = {95},
+  pages     = {391-398},
+  doi       = {10.1016/j.ijid.2020.04.051},
+  owner     = {Vincent},
+  timestamp = {2021.09.23},
+}
+
 @Article{Wang2020a,
   author    = {Wang, M. and Du, X. and Shu, X. and Wang, X. and Tang, J.},
   title     = {Deep supervised feature selection for social relationship recognition},
@@ -40521,6 +40934,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2020.12.15},
   url       = {https://www.aclweb.org/anthology/C18-1167},
+}
+
+@Article{Worth2008,
+  author    = {Worth, S. E.},
+  title     = {Storytelling and Narrative Knowing: An Examination of the Epistemic Benefits of Well-Told Stories},
+  journal   = {Journal of Aesthetic Education},
+  year      = {2008},
+  volume    = {42},
+  number    = {3},
+  pages     = {42-56},
+  owner     = {Vincent},
+  timestamp = {2021.09.23},
+  url       = {https://www.jstor.org/stable/25160289},
 }
 
 @Article{Wright1991,
@@ -41782,6 +42208,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.12.01},
 }
 
+@InProceedings{Zen2015,
+  author    = {Zen, H. and Sak, H.},
+  title     = {Unidirectional long short-term memory recurrent neural network with recurrent output layer for low-latency speech synthesis},
+  booktitle = {IEEE International Conference on Acoustics, Speech and Signal Processing},
+  year      = {2015},
+  doi       = {10.1109/icassp.2015.7178816},
+  owner     = {Vincent},
+  timestamp = {2021.09.23},
+}
+
 @InProceedings{Zeng2014,
   author    = {Zeng, W. and Li, C. and Feng, B. and Yang, N. and Luo, Q.},
   title     = {Discovering Most Influential Social Networks Nodes Based on Floating Influence},
@@ -41937,6 +42373,20 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1073/pnas.1409770111},
   owner     = {Vincent},
   timestamp = {2014.03.31},
+}
+
+@Article{Zhang2014q,
+  author        = {Zhang, J. and Zhao, H. and Xu, J.-Q. and Wang, J.-F.},
+  title         = {Small-world and Scale-free Features in Harry Potter},
+  journal       = {TELKOMNIKA Indonesian Journal of Electrical Engineering},
+  year          = {2014},
+  volume        = {12},
+  number        = {8},
+  pages         = {6411-6416},
+  __markedentry = {[Vincent:]},
+  doi           = {10.11591/telkomnika.v12i8.5331},
+  owner         = {Vincent},
+  timestamp     = {2021.09.23},
 }
 
 @InProceedings{Zhang2015,
