--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -19395,6 +19395,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.03.23},
 }
 
+@InCollection{Keller2002,
+  author    = {Keller, E. F.},
+  title     = {Models, Simulation, and `Computer Experiments'},
+  booktitle = {The Philosophy of Scientific Experimentation},
+  publisher = {University of Pittsburgh Press},
+  year      = {2002},
+  pages     = {198-215},
+  owner     = {Vincent},
+  timestamp = {2021.09.25},
+  url       = {https://homes.luddy.indiana.edu/jbollen/I501F11/readings/week8/Keller_2002_MODELS_SIMULATION_AND_COMPUTER_EXPERIMENTS.pdf},
+}
+
 @Article{Kello2010,
   author    = {Kello, C. T. and Brown, G. D. A. and Ferrer-i-Cancho, R. and Holden, J. G. and Linkenkaer-Hansen, K. and Rhodes, T. and Van Orden, G. C.},
   title     = {Scaling laws in cognitive sciences},
@@ -27182,6 +27194,28 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://litlab.stanford.edu/LiteraryLabPamphlet15.pdf},
 }
 
+@Book{Moretti2017a,
+  title     = {Canon/Archive: Studies in Quantitative Formalism},
+  publisher = {n+1 Foundation},
+  year      = {2017},
+  author    = {Moretti, F.},
+  owner     = {Vincent},
+  timestamp = {2021.09.25},
+  url       = {https://books.google.fr/books/about/Canon_Archive.html?id=APZ7tAEACAAJ},
+}
+
+@Article{Moretti2019,
+  author    = {Moretti, F. and Sobchuck, O.},
+  title     = {Hidden in Plain Sight: Data Visualization in the Humanities},
+  journal   = {New Left Review},
+  year      = {2019},
+  volume    = {118},
+  pages     = {86-119},
+  owner     = {Vincent},
+  timestamp = {2021.09.25},
+  url       = {https://newleftreview.org/issues/ii118/articles/franco-moretti-oleg-sobchuk-hidden-in-plain-sight},
+}
+
 @Article{Moretti2020,
   author    = {Moretti, F.},
   title     = {Simulating Dramatic Networks: Morphology, History, Literary Study},
@@ -27193,6 +27227,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1163/24056480-20201001},
   owner     = {Vincent},
   timestamp = {2021.09.18},
+}
+
+@Article{Moretti2020a,
+  author    = {Moretti, F.},
+  title     = {The Road to Rome: Literary Studies, Hermeneutics, Quantification},
+  journal   = {New Left Review},
+  year      = {2020},
+  volume    = {124},
+  owner     = {Vincent},
+  timestamp = {2021.09.25},
+  url       = {https://newleftreview.org/issues/ii124/articles/franco-moretti-the-roads-to-rome},
 }
 
 @Article{Morgan1962,
@@ -31264,6 +31309,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://books.google.fr/books/about/A_Dictionary_of_Narratology.html?id=WvRNGan8YZcC&redir_esc=y},
 }
 
+@Book{Propp1968,
+  title     = {Morphology of the Folktales},
+  publisher = {University of Texas Press},
+  year      = {1968},
+  author    = {Propp, V.},
+  owner     = {Vincent},
+  timestamp = {2021.09.25},
+  url       = {https://monoskop.org/images/f/f3/Propp_Vladimir_Morphology_of_the_Folktale_2nd_ed.pdf},
+}
+
 @Book{Propp1984,
   title     = {Theory and History of Folklore},
   publisher = {Manchester University Press},
@@ -34212,6 +34267,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1093/acprof:oso/9780195335910.001.0001},
   owner     = {Vincent},
   timestamp = {2020.07.22},
+}
+
+@Book{Scherer1959,
+  title     = {La dramatugie classique en France},
+  publisher = {Nizet},
+  year      = {1959},
+  author    = {Scherer, J.},
+  owner     = {Vincent},
+  timestamp = {2021.09.25},
+  url       = {https://books.google.fr/books/about/La_dramaturgie_classique_en_France.html?id=vkonAAAAMAAJ},
 }
 
 @Article{Schich2014,
@@ -37729,6 +37794,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://www.bloomsbury.com/us/the-origin-tradition-of-ancient-israel-9780567333032/},
 }
 
+@Book{Thompson1992,
+  title     = {On Growth and Form: The Complete Revised Edition},
+  publisher = {Dover},
+  year      = {1992},
+  author    = {Thompson, D. W.},
+  owner     = {Vincent},
+  timestamp = {2021.09.25},
+  url       = {https://store.doverpublications.com/0486671356.html},
+}
+
 @Book{Thompson1999,
   title     = {Storytelling in the New Hollywood: Understanding Classical Narrative Technique},
   publisher = {Harvard University Press},
@@ -40036,6 +40111,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   publisher = {Public Library of Science},
   timestamp = {2015.07.06},
+}
+
+@InCollection{Weber1949,
+  author    = {Weber, M.},
+  title     = {`Objectivity' in Social Science and Social Policy},
+  booktitle = {The Methodology of the Social Science},
+  publisher = {The Free Press},
+  year      = {1949},
+  pages     = {49-112},
+  owner     = {Vincent},
+  timestamp = {2021.09.25},
+  url       = {https://www.taylorfrancis.com/chapters/mono/10.4324/9781315124445-2/objectivity-social-science-social-policy-max-weber},
 }
 
 @InCollection{Weeks2014,
