--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -5246,19 +5246,6 @@
   timestamp = {2019.04.13},
 }
 
-@Article{Breiman2001a,
-  author    = {Breiman, L.},
-  title     = {Random Forests},
-  journal   = {Machine Learning},
-  year      = {2001},
-  volume    = {45},
-  number    = {1},
-  pages     = {5-32},
-  doi       = {10.1023/a:1010933404324},
-  owner     = {Vincent},
-  timestamp = {2020.03.13},
-}
-
 @Book{Brendel2011,
   title     = {Understanding Quotation},
   publisher = {De Gruyter},
@@ -11341,19 +11328,6 @@ arXiv: https://arxiv.org/abs/1709.07604},
   timestamp = {2020.08.14},
 }
 
-@Article{Endert2012a,
-  author    = {Endert, A. and Fiaux, P. and North, C.},
-  title     = {Semantic Interaction for Sensemaking: Inferring Analytical Reasoning for Model Steering},
-  journal   = {IEEE Transactions on Visualization and Computer Graphics},
-  year      = {2012},
-  volume    = {18},
-  number    = {12},
-  pages     = {2879-2888},
-  doi       = {10.1109/tvcg.2012.260},
-  owner     = {Vincent},
-  timestamp = {2020.08.14},
-}
-
 @Article{Eom2014,
   author    = {Eom, Y.-H. and Jo, H.-H.},
   title     = {Generalized friendship paradox in complex networks: The case of scientific collaboration},
@@ -13320,6 +13294,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   timestamp = {2020.03.13},
 }
 
+@Article{Galam2004,
+  author    = {Galam, S.},
+  title     = {Sociophysics: a personal testimony},
+  journal   = {Physica A},
+  year      = {2004},
+  volume    = {336},
+  number    = {1-2},
+  pages     = {49-55},
+  doi       = {10.1016/j.physa.2004.01.009},
+  owner     = {Vincent},
+  timestamp = {2021.09.25},
+}
+
 @InCollection{Galam2011,
   author    = {Galam, S.},
   title     = {Sociophysics: The Origins},
@@ -14130,16 +14117,6 @@ arXiv: https://arxiv.org/abs/1709.07604},
   url       = {http://www.prasa.org/proceedings/2007/prasa07-05.pdf},
 }
 
-@InProceedings{Glass2007a,
-  author    = {Glass, K. and Bangay, S.},
-  title     = {A naïve, salience-based method for speaker identification in fiction books},
-  booktitle = {18th International Symposium of the Pattern Recognition Association of South Africa},
-  year      = {2007},
-  owner     = {Vincent},
-  timestamp = {2021.05.14},
-  url       = {http://hdl.handle.net/10536/DRO/DU:30039199f},
-}
-
 @Book{Gleed2009,
   title     = {Bloom's How to Write about William Shakespeare},
   publisher = {Infobase Publishing},
@@ -14353,19 +14330,6 @@ arXiv: https://arxiv.org/abs/1709.07604},
   doi       = {10.1090/s0025-5718-1970-0258249-6},
   owner     = {Vincent},
   timestamp = {2020.12.18},
-}
-
-@Article{Goldfarb1970a,
-  author    = {Goldfarb, D.},
-  title     = {A family of variable-metric methods derived by variational means},
-  journal   = {Mathematics of Computation},
-  year      = {1970},
-  volume    = {24},
-  number    = {109},
-  pages     = {23-23},
-  doi       = {10.1090/s0025-5718-1970-0258249-6},
-  owner     = {Vincent},
-  timestamp = {2021.09.21},
 }
 
 @Book{Goldman1985,
@@ -22279,19 +22243,6 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url           = {http://ceur-ws.org/Vol-2653/paper2.pdf},
 }
 
-@Article{Lee2020i,
-  author    = {Lee, O-J. and Hong, H. and You, E.-S. and Kim, J.-T.},
-  title     = {Discovering Social Desires and Conflicts from Subculture Narrative Multimedia},
-  journal   = {Sustainability},
-  year      = {2020},
-  volume    = {12},
-  number    = {24},
-  pages     = {10241},
-  doi       = {10.3390su122410241},
-  owner     = {Vincent},
-  timestamp = {2021.06.21},
-}
-
 @Article{Lee2021,
   author    = {Lee, O-J. and You, E.-S. and Kim, J.-T.},
   title     = {Plot Structure Decomposition in Narrative Multimedia by Analyzing Personalities of Fictional Characters},
@@ -24880,6 +24831,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   publisher = {Cambridge University Press},
   year      = {2000},
   author    = {Mantegna, R. N. and Stanley, H. E.},
+  doi       = {10.1017/cbo9780511755767},
   owner     = {Vincent},
   timestamp = {2019.04.09},
   url       = {https://dl.acm.org/citation.cfm?id=322494},
@@ -31307,16 +31259,6 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.04.13},
   url       = {https://books.google.fr/books/about/A_Dictionary_of_Narratology.html?id=WvRNGan8YZcC&redir_esc=y},
-}
-
-@Book{Propp1968,
-  title     = {Morphology of the Folktales},
-  publisher = {University of Texas Press},
-  year      = {1968},
-  author    = {Propp, V.},
-  owner     = {Vincent},
-  timestamp = {2021.09.25},
-  url       = {https://monoskop.org/images/f/f3/Propp_Vladimir_Morphology_of_the_Folktale_2nd_ed.pdf},
 }
 
 @Book{Propp1984,
@@ -39546,24 +39488,13 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   title     = {Likelihood ratio tests for model selection and non-nested hypotheses},
   journal   = {Econometrica: Journal of the Econometric Society},
   year      = {1989},
+  volume    = {57},
+  number    = {2},
   pages     = {307-333},
   doi       = {10.2307/1912557},
   owner     = {xavier},
   publisher = {JSTOR},
   timestamp = {2015.11.22},
-}
-
-@Article{Vuong1989a,
-  author    = {Vuong, Q. H.},
-  title     = {Likelihood Ratio Tests for Model Selection and Non-Nested Hypotheses},
-  journal   = {Econometrica},
-  year      = {1989},
-  volume    = {57},
-  number    = {2},
-  pages     = {307},
-  doi       = {10.2307/1912557},
-  owner     = {Vincent},
-  timestamp = {2021.09.21},
 }
 
 @Article{Waddell1983,
